--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^4.0.0",
-    "eslint-config-fnd": "^1.1.1"
+    "eslint-config-fnd": "^1.1.1",
+    "release-util-fnd": "^1.0.0"
   }
 }
