--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nite-owl",
-  "version": "5.0.2",
+  "version": "5.0.3",
   "description": "A debounced EventEmitter that watches for file changes",
   "main": "index.js",
   "scripts": {
@@ -19,8 +19,11 @@
     "url": "https://github.com/faucet-pipeline/nite-owl/issues"
   },
   "homepage": "https://github.com/faucet-pipeline/nite-owl#readme",
+  "engines": {
+    "node": ">=8"
+  },
   "dependencies": {
-    "chokidar": "^2.1.2"
+    "chokidar": "^3.0.0"
   },
   "devDependencies": {
     "eslint-config-fnd": "^1.6.0",
